# streamtts

./: .gitignore  .rebuild  AGENTS.md  Cargo.toml  LICENSE  README.md  app.js  cache-bust.txt  ccsniff-export.err  index.html  rust-toolchain.toml  train-start.ps1  train-status.ps1  train-stop.ps1  webjsx-shim.js
.cargo/: config.toml
.github/workflows/: build-and-deploy.yml  pages.yml  rust-build.yml
.gm/: prd.yml
docs/: index.html
sttx-ccsniff/: Cargo.toml
sttx-ccsniff/src/: lib.rs
sttx-cli/: Cargo.toml
sttx-cli/src/: main.rs
sttx-cli/tests/: integration.rs  train_witness.rs
sttx-core/: Cargo.toml
sttx-core/src/: lib.rs  obs.rs  replay.rs  tokenizer.rs  trace.rs
sttx-train/: Cargo.toml
sttx-train/examples/: smoke_load.rs  smoke_train.rs  train_corpus.rs
sttx-train/src/: checkpoint.rs  lib.rs  model.rs  serve.rs  tokens.rs  train.rs
test-data/: ccsniff-fixture.ndjson
vendor-patches/candle-core-patched/: .cargo-checksum.json
vendor-patches/candle-core-patched/src/: custom_op.rs  safetensors.rs
vendor-patches/candle-core-patched/src/quantized/: gguf_file.rs  k_quants.rs  mod.rs  simd128.rs
