[workspace]
resolver = "2"
members = [
    "sttx-core",
    "sttx-ccsniff",
    "sttx-train",
    "sttx-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["lanmower <almagestfraternite@gmail.com>"]
license = "MIT"
repository = "https://github.com/AnEntrypoint/streamtts"

[workspace.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "fs", "time"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
