[package]
name = "sttx-ccsniff"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sttx-core = { path = "../sttx-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
