[package]
name = "sttx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "streamtts"
path = "src/main.rs"

[dependencies]
sttx-core = { path = "../sttx-core" }
sttx-ccsniff = { path = "../sttx-ccsniff" }
sttx-train = { path = "../sttx-train" }
candle-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
ahash = "0.8"
