[package]
name = "sttx-train"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "smoke_load"
path = "examples/smoke_load.rs"

[[example]]
name = "smoke_train"
path = "examples/smoke_train.rs"

[[example]]
name = "train_corpus"
path = "examples/train_corpus.rs"

[dependencies]
sttx-core = { path = "../sttx-core" }
sttx-ccsniff = { path = "../sttx-ccsniff" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
safetensors = "0.4"
ahash = "0.8"
